redisign monitoring + quelques animations

--- a/website/templates/Jeu2-reveal.html
+++ b/website/templates/Jeu2-reveal.html
@@ -1,6 +1,6 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
 %}
-<div class="w3-display-middle w3-center" style="width:340px;">
+<div class="w3-display-middle w3-center animate__animated animate__fadeIn" style="width:340px;">
   <div class="w3-margin-bottom" style="display:flex; justify-content:space-around;">
 
     {% for i in range(2) %}
