--- a/website/templates/Jeu5-Valider.html
+++ b/website/templates/Jeu5-Valider.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:350px;">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
   <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>{{user["message"]}}</h4>
   </header>
