--- a/website/templates/base+don.html
+++ b/website/templates/base+don.html
@@ -1,6 +1,6 @@
 {% extends "base+etoiles.html" %}{% block inside2%}
 
-<div class="w3-container w3-center">
+<div class="w3-center" style="margin-left:150px">
 <form method="POST">
 <button type="submit" class="w3-btn w3-xlarge w3-round-large w3-margin w3-red w3-border" name="boutton" value="don" style="width:170px">Faire un don</button>
 </form>
