--- a/website/templates/partager.html
+++ b/website/templates/partager.html
@@ -1,6 +1,6 @@
 {% extends "base+etoiles.html" %} {% block title %}Partager{% endblock %} {% block inside2%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center" style="width:263px;">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center animate__animated animate__fadeIn" style="width:263px;">
   <header class="w3-container w3-text-white" style="background-color:{{theme_color}}">
       <h4 id="total"> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:22px" alt="Coin"> &nbsp; à partager</h4>
   </header>
