--- a/website/templates/Jeu2-choix.html
+++ b/website/templates/Jeu2-choix.html
@@ -1,7 +1,7 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
 %}
 
-<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white">
+<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white animate__animated animate__fadeIn">
 <header class="w3-container w3-text-white" style="background-color:{{theme_color}}">
     <h4>Choisissez un nombre</h4>
 </header>
