--- a/website/templates/Jeu3-choix.html
+++ b/website/templates/Jeu3-choix.html
@@ -3,7 +3,7 @@
 <h2 class="w3-text-white w3-padding-large  w3-text-white" style="position:absolute; top:50px; right:0px; background-color:{{theme_color}}">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
 {% endif %}
 
-<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white">
+<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white animate__animated animate__fadeIn">
 <header class="w3-container" style="background-color:{{theme_color}}">
     <h4>Combien shouaitez vous investir ?</h4>
 </header>
