--- a/website/templates/Jeu4-choix.html
+++ b/website/templates/Jeu4-choix.html
@@ -1,7 +1,7 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
 %}
 
-<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white">
+<div id="card2" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn w3-display-middle">
 <header class="w3-container" style="background-color:{{theme_color}}">
     <h4>Choisissez un nombre</h4>
 </header>
