--- a/website/templates/Jeu4-reveal.html
+++ b/website/templates/Jeu4-reveal.html
@@ -1,6 +1,6 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
 %}
-<div class="w3-display-middle w3-center" style="width:500px;">
+<div class="w3-display-middle w3-center animate__animated animate__fadeIn" style="width:500px;">
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
     <div class="w3-card w3-margin w3-padding w3-half" style="width:200px; height:150px; background-color:{{players[0]['color']}}">
       <h3><b>{{players[0]["name"]}}</b></h3>
