--- a/website/templates/Jeu5-proposition.html
+++ b/website/templates/Jeu5-proposition.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
-<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white" style="width:400px;">
+<form method="POST" class="w3-card-4 w3-display-middle w3-center w3-white animate__animated animate__fadeIn" style="width:400px;">
 <header class="w3-container w3-text-white" style="background-color:{{theme_color}}">
     <h4>Veuillez faire une offre aux autres joueurs</h4>
 </header>
