--- a/website/templates/don_etoiles.html
+++ b/website/templates/don_etoiles.html
@@ -1,6 +1,6 @@
 {% extends "base+don.html" %} {% block title %}Donner des étoiles{% endblock %} {% block content%}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:250px;">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
   <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>À qui shouaitez-vous léguer des étoiles ?</h4>
   </header>
