--- a/website/templates/en_attente_jeu5.html
+++ b/website/templates/en_attente_jeu5.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside%}
 
-<div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-display-container w3-display-middle w3-padding">
+<div class="w3-panel w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-display-container w3-display-middle w3-padding animate__animated animate__fadeIn">
   <h5>En attente des autres joueurs</h5>
   <h4 id="count">{{done}} / 4</h4>
 </div>
