--- a/website/templates/faire_un_don.html
+++ b/website/templates/faire_un_don.html
@@ -3,7 +3,7 @@
 <h2 class="w3-text-white w3-padding-large" style="position:absolute; top:50px; right:0px; background-color:{{theme_color}}">( {{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" style="width:30px" alt="Coin"> )</h2>
 {% endif %}
 
-  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white" style="width:250px;">
+  <div class="w3-card-4 w3-display-middle w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:250px;">
   <header class="w3-container" style="background-color:{{theme_color}}">
       <h4>Faire un don</h4>
   </header>
