--- a/website/templates/quiz.html
+++ b/website/templates/quiz.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}QUIZ{% endblock %} {% block inside%}
 
-<div class="w3-panel w3-center w3-display-middle w3-padding w3-large" style="border-style:solid; border-width: 5px; border-color:{{theme_color}}; background-color:{{secondary_theme_color}}">
+<div class="w3-panel w3-center w3-display-middle w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{theme_color}}; background-color:{{secondary_theme_color}}">
 {% if input %}
 <form method="POST">
   <p><input name="réponse" class="w3-input w3-border w3-round-large w3-center" placeholder="Votre réponse" type="text" style="width:200px;"></p>
