--- a/website/templates/Jeu1-choix.html
+++ b/website/templates/Jeu1-choix.html
@@ -30,7 +30,7 @@
 <option value="19">19 tickets</option>
 <option value="20">20 tickets</option>
 </select>
-<button type="submit" class="w3-button" style="background-color:{{theme_color}}" name="boutton" value="jeu1-choix">Valider</button></form>
+<button type="submit" class="w3-button" style="background-color:{{theme_color}}" name="boutton" value="Jeu1-choix">Valider</button></form>
 </div>
 
 {% endblock %}
