--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -27,9 +27,9 @@
 
 {% block inside %} {% endblock %}
 
-<div class="w3-card-4 w3-display-middle w3-white" style="width:350px;">
-    <div class="w3-container w3-green">
-      <h2 class="w3-center">Qui est-tu ?</h2>
+<div class="w3-card-4 w3-display-middle w3-white" style="width:300px;">
+    <div class="w3-container w3-green w3-center w3-xlarge w3-padding">
+      Qui est-tu ?
     </div>
 
     <form class="w3-container" method="POST">
