--- a/website/templates/base+don.html
+++ b/website/templates/base+don.html
@@ -1,10 +1,12 @@
 {% extends "base+etoiles.html" %}{% block inside2%}
 
-<div class="w3-center" style="margin-left:150px">
+<div class="w3-center" style="margin-left:115px">
 <form method="POST">
-<button type="submit" class="w3-btn w3-xlarge w3-round-large w3-margin w3-red w3-border" name="boutton" value="don" style="width:170px">Faire un don</button>
+<button type="submit" class="w3-btn w3-round-large w3-margin w3-red w3-border" name="boutton" value="don" style="font-size:22px">Faire un don</button>
 </form>
 </div>
 
+<div style="width: 100%; min-height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; flex-grow: 1">
 {% block content %} {% endblock %}
+</div>
 {% endblock %}
