--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,24 +14,24 @@
   </head>
 
 <body style="background-image: url({{url_for('static', filename="images/"+background)}}); min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start;">
-  <div class="w3-container w3-text-white" style="height:72px; background-color:{{theme_color}}">
-    <h3 class="w3-right w3-xxlarge"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:32px" alt="Coin"></h3>
+  <div class="w3-container w3-text-white" style="height:50px; background-color:{{theme_color}}">
+    <div class="w3-right" style="font-size:33px"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:27px; position:relative; bottom:2px" alt="Coin"></div>
   </div>
 
-  <div id="messages" class="w3-display-bottommiddle w3-padding">
+  <div id="messages" style="position:absolute; bottom:5px; display:flex; flex-direction: column; align-items:center; width:100%; font-size:16px;">
   {% with messages = get_flashed_messages(with_categories=true) %} {% if
    messages %} {% for category, message in messages %}
     {% if category == 'error' %}
-    <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
-      <i class="fa fa-exclamation-circle w3-large w3-text-red w3-margin-right"></i>
+    <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-display-container w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+      <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
       <div class="w3-center">{{ message }}</div>
-      <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
+      <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
     </div>
     {% else %}
-   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
-     <i class="fa fa-info-circle w3-large w3-text-green w3-margin-right"></i>
+   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+     <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
      <div class="w3-center">{{ message }}</div>
-     <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
+     <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
    </div>
   {% endif %} {% endfor %} {% endif %} {% endwith %}
   </div>
@@ -46,10 +46,10 @@
     });
     socket.on('message', function(msg) {
         document.getElementById('messages').innerHTML += `
-  <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px;">
-    <i class="fa fa-info-circle w3-large w3-text-green w3-margin-right"></i>
+  <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-display-container w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+    <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
     <div class="w3-center">` + msg + `</div>
-    <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; margin-left: 6px">&times;</span>
+    <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
   </div>
 `;
     });
