--- a/website/templates/title.html
+++ b/website/templates/title.html
@@ -1,24 +1,24 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
 
-<div style="width: 100%; min-height: 100%; display: flex; flex-direction: column; justify-content: space-around; align-items: center; flex-grow: 1" class="animate__animated animate__zoomIn">
-  <div class="w3-card-4 w3-center" style="width:400px; background-color:{{secondary_theme_color}}">
-    <div class="w3-container w3-margin w3-text-white" style="background-color:{{theme_color}}">
-      {% if background == "10.jpg" %}
-        <h1>Premier jeu</h1>
-      {% elif background == "9.jpg" %}
-        <h1>Deuxième jeu</h1>
-      {% elif background == "8.jpg" %}
-        <h1>Troisième jeu</h1>
-      {% elif background == "6.jpg" %}
-        <h1>Quatrième jeu</h1>
-      {% elif background == "7.jpg" %}
-        <h1>Cinquième jeu</h1>
-      {% endif %}
-    </div>
+
+<div class="w3-card-4 w3-center animate__animated animate__zoomIn" style="background-color:{{secondary_theme_color}}">
+  <div class="w3-container w3-text-white" style="background-color:{{theme_color}}; margin:10px">
+    {% if background == "10.jpg" %}
+      <h2>Premier jeu</h2>
+    {% elif background == "9.jpg" %}
+      <h2>Deuxième jeu</h2>
+    {% elif background == "8.jpg" %}
+      <h2>Troisième jeu</h2>
+    {% elif background == "6.jpg" %}
+      <h2>Quatrième jeu</h2>
+    {% elif background == "7.jpg" %}
+      <h2>Cinquième jeu</h2>
+    {% endif %}
   </div>
-  <iframe src="{{url_for('static', filename='animations/Jeu1.sozi.html')}}" style="width: 100%; flex-grow: 1;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{gameState['frameId']}} % player.presentation.frames.length);">
-    My Sozi presentation should play here.
-  </iframe>
 </div>
+<iframe src="{{url_for('static', filename='animations/Jeu1.sozi.html')}}" style="width: 100%;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{gameState['frameId']}} % player.presentation.frames.length);">
+  My Sozi presentation should play here.
+</iframe>
+
 
 {% endblock %}
