--- a/website/templates/Jeu1-choix.html
+++ b/website/templates/Jeu1-choix.html
@@ -1,12 +1,12 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content
 %}
 
-<div class="w3-card-4 w3-display-middle w3-center w3-white w3-text-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-container" style="background-color:{{theme_color}}"">
+<div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
+<header class="w3-text-white" style="background-color:{{theme_color}}"">
     <h4>Combien de tiquets voulez-vous mettre en jeu ?</h4>
 </header>
 <form method="POST">
-<select class="w3-select w3-border w3-margin" style="width:50%;" id="tickets" name="tickets">
+<select class="w3-select w3-border w3-margin" style="width:200px;" id="tickets" name="tickets">
 <option value="" disabled="" selected="">Nombre de tickets</option>
 <option value="0">Aucun ticket</option>
 <option value="1">1 ticket</option>
