--- a/website/templates/Jeu1-choix.html
+++ b/website/templates/Jeu1-choix.html
@@ -2,11 +2,11 @@
 %}
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-text-white" style="background-color:{{theme_color}}"">
-    <h4>Combien de tiquets voulez-vous mettre en jeu ?</h4>
+<header class="w3-text-white w3-padding medium" style="background-color:{{theme_color}}">
+    Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST">
-<select class="w3-select w3-border w3-margin" style="width:200px;" id="tickets" name="tickets">
+<select class="w3-select w3-border w3-margin w3-large" style="width:180px;" id="tickets" name="tickets">
 <option value="" disabled="" selected="">Nombre de tickets</option>
 <option value="0">Aucun ticket</option>
 <option value="1">1 ticket</option>
@@ -30,7 +30,7 @@
 <option value="19">19 tickets</option>
 <option value="20">20 tickets</option>
 </select>
-<button type="submit" class="w3-button" style="background-color:{{theme_color}}" name="boutton" value="jeu1-choix">Valider</button></form>
+<button type="submit" class="w3-button w3-large" style="background-color:{{theme_color}}" name="boutton" value="jeu1-choix">Valider</button></form>
 </div>
 
 {% endblock %}
