--- a/website/templates/Jeu2-choix.html
+++ b/website/templates/Jeu2-choix.html
@@ -1,23 +1,21 @@
 {% extends "base+don.html" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
 %}
 
-<div id="card2" class="w3-card-4 w3-display-middle w3-center w3-white animate__animated animate__fadeIn">
-<header class="w3-container w3-text-white" style="background-color:{{theme_color}}">
-    <h4>Choisissez un nombre</h4>
+<div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
+<header class="w3-text-white medium w3-padding" style="background-color:{{theme_color}}">
+    Choisissez un nombre
 </header>
 <form method="POST">
   <div class="w3-margin w3-lobster">
     {% for i in range(5) %}
-    <div class="w3-cell w3-padding-small">
       {% if user["choix"] == i+1 %}
-      <button type="submit" name="boutton" value={{i+1}} class="circle w3-xlarge w3-cell w3-cell-middle w3-grayscale" style="background-color: #bff5ea; border:5px solid #009688;" disabled>{{i+1}}</button>
+      <button type="submit" name="boutton" value={{i+1}} class="circle w3-grayscale" style="background-color: #bff5ea;" disabled>{{i+1}}</button>
       {% else %}
-      <button type="submit" name="boutton" value={{i+1}} class="circle w3-xlarge w3-hover-opacity w3-cell w3-cell-middle" style="background-color: #bff5ea;  border:5px solid #009688;">{{i+1}}</button>
+      <button type="submit" name="boutton" value={{i+1}} class="circle w3-hover-opacity" style="background-color: #bff5ea;">{{i+1}}</button>
       {% endif %}
-    </div>
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white" style="background-color:{{theme_color}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{theme_color}}">Valider</button></p>
   </form>
 </div>
 
