--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="{{url_for('static', filename="main.css")}}" type="text/css">
+    <link rel="stylesheet" href="{{url_for('static', filename="flouze.css")}}" type="text/css">
     <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type="image/x-icon">
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
 <body style="background-image: url({{url_for('static', filename="images/"+background)}}); min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start;">
   <div class="w3-container w3-text-white" style="height:50px; background-color:{{theme_color}}">
-    <div class="w3-right" style="font-size:33px"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" style="width:27px; position:relative; bottom:2px" alt="Coin"></div>
+    <div class="w3-right huge"><span id="flouze">{{user["flouze"]}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" class="coin-large" alt="Coin"></div>
   </div>
-  
+  {% if user["saved_flouze"] != 0 %}
+  <div class="w3-text-white w3-text-white large w3-round-large" style="text-align:right; padding:2px 16px; position:absolute; top:40px; right:0; background-color:{{theme_color}}">({{user["saved_flouze"]}} <img src="{{url_for('static', filename="images/coin.png")}}" class="coin-medium" alt="Coin">)</div>
+  <div style="height:28px">*</div>
+  {% endif %}
+
 {% block inside %} {% endblock %}
 
-  <div id="messages" style="position:absolute; bottom:5px; display:flex; flex-direction: column; align-items:center; width:100%; font-size:16px;">
+  <div id="messages" class="toast">
   {% with messages = get_flashed_messages(with_categories=true) %} {% if
    messages %} {% for category, message in messages %}
     {% if category == 'error' %}
@@ -30,7 +33,7 @@
       <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
     </div>
     {% else %}
-   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-large w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+   <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
      <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
      <div class="w3-center">{{ message }}</div>
      <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
