--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="{{url_for('static', filename="flouze.css")}}" type="text/css">
     <style>
     body {
       background-image: url({{url_for('static', filename="images/2.jpg")}});
@@ -16,14 +16,16 @@
   </head>
 
 <body>
+<div id="messages" style="position:absolute; bottom:5px; display:flex; flex-direction: column; align-items:center; width:100%; font-size:16px;">
 {% with messages = get_flashed_messages(with_categories=true) %} {% if
  messages %} {% for category, message in messages %}
-  <div class="w3-panel w3-pale-red w3-round-large w3-border w3-border-red w3-center w3-display-container animate__lightSpeedInRight" style="position: absolute; width:90%; bottom:15px; left:5%;">
-    <i class="fa fa-exclamation-circle w3-display-left w3-xlarge w3-text-red w3-margin-left"></i>
-    <span onclick="this.parentElement.style.display='none'" class="w3-button w3-large w3-display-topright w3-round-large">&times;</span>
-    <h4>{{ message }}</h4>
+  <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+    <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
+    <div class="w3-center">{{ message }}</div>
+    <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
   </div>
  {% endfor %} {% endif %} {% endwith %}
+</div>
 
 {% block inside %} {% endblock %}
 
